# UltrasoundProbeTest

./: .gitignore  CMakeLists.txt  README.md  Spec_Init.txt  UltrasoundProbeTest.pro  build.bat  ~$探头自动化测试与校准软件 V1.0.docx  超声探头自动化测试与校准软件 V1.0.docx  超声探头自动化测试与校准软件.docx
.github/workflows/: build.yml
config/: Application.json  HardwareMode.json  ProbeConfig.json  SensitivityList.txt  WaveformConfig.json
include/Business/: PortScanner.h  ProbeManager.h  ProbeReader.h  ScriptLoader.h
include/Config/: ConfigManager.h  JsonLoader.h  Logger.h  ProbeConfig.h  SensitivityImporter.h  Validator.h
include/HAL/: HardwareFactory.h  HardwareInterface.h  MockHardwareDriver.h
include/UI/: MainWindow.h
openspec/changes/config-management/: design.md  proposal.md  tasks.md
openspec/changes/echo-test-dsp/: design.md  proposal.md  tasks.md
openspec/changes/git-repo-initialization/: design.md  proposal.md  tasks.md
openspec/changes/git-repo-initialization/specs/git-initialization/: spec.md
openspec/changes/hardware-abstraction/: design.md  proposal.md  tasks.md
openspec/changes/probe-detection/: design.md  proposal.md  tasks.md
openspec/changes/project-skeleton/: design.md  proposal.md  tasks.md
openspec/changes/report-ui/: design.md  proposal.md  tasks.md
openspec/changes/ultrasound-probe-test-system/: design.md  proposal.md  tasks.md
openspec/changes/ultrasound-probe-test-system/specs/calibration/: spec.md
openspec/changes/ultrasound-probe-test-system/specs/config-management/: spec.md
src/: main.cpp
src/Business/: PortScanner.cpp  ProbeManager.cpp  ProbeReader.cpp  ScriptLoader.cpp
src/Config/: ConfigManager.cpp  JsonLoader.cpp  Logger.cpp  SensitivityImporter.cpp  Validator.cpp
src/HAL/: HardwareFactory.cpp  HardwareInterface.cpp  MockHardwareDriver.cpp
src/UI/: MainWindow.cpp
tests/: CMakeLists.txt  test_configmanager.cpp  test_configmanager.h  test_mockhardware.cpp  test_mockhardware.h  tests.pro
(+10 files in other folders)
